--- a/ARIMA copy 2.ipynb
+++ b/ARIMA copy 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "d4817bc0",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "6e02d1b3",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "96b075ac",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "c46afcea",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "0e9d0f6b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "0ec0510e",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "6eb9f07a",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "(0, 1, 1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "96e2ab4a",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "7b78baab",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "d422a71c",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "[428 rows x 2 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "efda894a",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "06d1dd0f",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "Index(['AAPL.O', 'Returns', 'AAPL.O_pred'], dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "id": "a4d8084c",
    "metadata": {},
    "outputs": [],
@@ -349,29 +349,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 60,
    "id": "7bc2829c",
    "metadata": {},
    "outputs": [],
    "source": [
     "for stock in selected:\n",
-    "    stock_returns = testing_data[stock]['Returns']\n",
-    "    rsi = calculate_rsi(stock_returns)\n",
-    "    macd_line, signal_line, histogram = calculate_macd(stock_returns)\n",
-    "    testing_data[stock]['RSI'] = rsi\n",
-    "    testing_data[stock]['MACD'] = macd_line"
+    "    stock_predictions = testing_data[stock][stock + '_pred']\n",
+    "    stock_values = testing_data[stock][stock]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 55,
    "id": "b92ecb67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rsi_trading_strategy(rsi_data):\n",
-    "    buy_signal = (rsi_data.shift(1) < 30) & (rsi_data > 30)\n",
-    "    sell_signal = (rsi_data.shift(1) > 70) & (rsi_data < 70)\n",
+    "def rsi_trading_strategy(rsi_data, low=30, high=70):\n",
+    "    buy_signal = (rsi_data.shift(1) < low) & (rsi_data > low)\n",
+    "    sell_signal = (rsi_data.shift(1) > high) & (rsi_data < high)\n",
     "    return buy_signal.astype(int) - sell_signal.astype(int)\n",
     "\n",
     "def macd_trading_strategy(macd_line, signal_line):\n",
@@ -382,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "id": "89e4ddbe",
    "metadata": {},
    "outputs": [
@@ -390,32 +387,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Returns        1.575807\n",
-      "Returns_rsi    0.998365\n",
-      "dtype: float64\n",
-      "Returns        1.710198\n",
-      "Returns_rsi    1.038089\n",
-      "dtype: float64\n",
-      "Returns        1.316821\n",
-      "Returns_rsi    1.011106\n",
-      "dtype: float64\n",
-      "Returns        2.078885\n",
-      "Returns_rsi    0.992798\n",
-      "dtype: float64\n",
-      "Returns        1.277704\n",
-      "Returns_rsi    1.020493\n",
-      "dtype: float64\n"
+      "AAPL.O 25 60 5 0.0073737373737373735 2.281798980082736 1.5758065889163198\n",
+      "MSFT.O 25 60 5 0.0 2.2182284571426223 1.7101977107180022\n",
+      "INTC.O 39 60 15 0.0 1.4196690532482448 1.316821192052981\n",
+      "AMZN.O 37 60 5 0.0022222222222222222 2.095442157372656 2.078884608328751\n",
+      "GS.N 37 60 19 0.0016161616161616162 1.5836048533981912 1.2777037594856042\n"
      ]
     }
    ],
    "source": [
+    "from collections import defaultdict\n",
     "for stock in selected:\n",
-    "    stock_returns = testing_data[stock]['Returns']\n",
-    "    signals = rsi_trading_strategy(testing_data[stock]['RSI'])\n",
-    "    testing_data[stock]['rsi_signal'] = signals\n",
-    "    return_name = 'Returns_rsi'\n",
-    "    testing_data[stock][return_name] = signals * testing_data[stock]['Returns']\n",
-    "    print(testing_data[stock][['Returns', return_name]].sum().apply(np.exp))"
+    "    stock_predictions = testing_data[stock][stock + '_pred']\n",
+    "    stock_values = testing_data[stock][stock]\n",
+    "    max_return = -np.inf\n",
+    "    best_low = None\n",
+    "    best_high = None\n",
+    "    best_window = None\n",
+    "    best_pct_within = None\n",
+    "    for window in range(5, 30, 2):\n",
+    "        stock_rsi = calculate_rsi(stock_predictions, window)\n",
+    "        macd_line, signal_line, histogram = calculate_macd(stock_predictions)\n",
+    "        stock_macd = macd_line - signal_line\n",
+    "        for low in range(25, 40, 2):\n",
+    "            for high in range(60, 65, 1):\n",
+    "                for pct_within in np.linspace(0.0, 0.01, 100):\n",
+    "                    rsi_signals = rsi_trading_strategy(stock_rsi, low, high)\n",
+    "                    rsi_signals = np.where(rsi_signals > 0, 1, -1)\n",
+    "                    macd_signals = macd_trading_strategy(macd_line, signal_line)\n",
+    "                    macd_signals = np.where(macd_signals > 0, 1, -1)\n",
+    "                    other_signals_1 = generate_signals(stock_predictions.values, stock_predictions.values, pct_within)\n",
+    "                    other_signals_2 = generate_signals(stock_predictions.values, stock_values.values, pct_within)\n",
+    "\n",
+    "                    # Use the majority vote to determine the final signal\n",
+    "                    signals = rsi_signals + macd_signals + other_signals_1\n",
+    "                    signals = np.where(signals > 0, 1, -1)\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                        best_window = window\n",
+    "                        best_pct_within = pct_within\n",
+    "                    \n",
+    "                    # Use the majority vote to determine the final signal\n",
+    "                    signals = rsi_signals + macd_signals + other_signals_2\n",
+    "                    signals = np.where(signals > 0, 1, -1)\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                        best_window = window\n",
+    "                        best_pct_within = pct_within\n",
+    "                    \n",
+    "                    signals = np.where((stock_rsi < low) & (stock_macd > 0), 1,\n",
+    "                                np.where((stock_rsi > high) & (stock_macd < 0), -1, 0))\n",
+    "                    for i in range(1, len(testing_data)):\n",
+    "                        if signals[i] == 0:\n",
+    "                            signals[i] = signals[i - 1]\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                        best_window = window\n",
+    "                        best_pct_within = pct_within\n",
+    "\n",
+    "                    signals = np.where((stock_rsi < low) & (stock_macd > 0), 1,\n",
+    "                                np.where((stock_rsi > high) & (stock_macd < 0), -1, 0))\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                        best_window = window\n",
+    "                        best_pct_within = pct_within\n",
+    "                    \n",
+    "                    # Only other_signals_1\n",
+    "                    signals = other_signals_1\n",
+    "                    signals = np.where(signals > 0, 1, -1)\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                        best_window = window\n",
+    "                        best_pct_within = pct_within\n",
+    "                    # Only rsi_signals\n",
+    "                    signals = rsi_signals\n",
+    "                    signals = np.where(signals > 0, 1, -1)\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                    # Only macd_signals\n",
+    "                    signals = macd_signals\n",
+    "                    signals = np.where(signals > 0, 1, -1)\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "                    # Only other_signals_2\n",
+    "                    signals = other_signals_2\n",
+    "                    signals = np.where(signals > 0, 1, -1)\n",
+    "                    returns = signals * testing_data[stock]['Returns']\n",
+    "                    if np.exp(returns.sum()) > max_return:\n",
+    "                        max_return = np.exp(returns.sum())\n",
+    "                        best_low = low\n",
+    "                        best_high = high\n",
+    "    print(stock, best_low, best_high, best_window, best_pct_within, max_return, np.exp(testing_data[stock]['Returns'].sum()))"
    ]
   },
   {
@@ -433,54 +516,6 @@
     "        testing_data[stock][return_name] = signals * testing_data[stock]['Returns']\n",
     "        # Use return_name string to access the column in DataFrame\n",
     "        print(testing_data[stock][['Returns', return_name]].sum().apply(np.exp))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "c4eab935",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Returns      1.575807\n",
-      "Returns_0    1.385859\n",
-      "dtype: float64\n",
-      "Returns      1.710198\n",
-      "Returns_0    0.882503\n",
-      "dtype: float64\n",
-      "Returns      1.316821\n",
-      "Returns_0    1.178938\n",
-      "dtype: float64\n",
-      "Returns      2.078885\n",
-      "Returns_0    1.109354\n",
-      "dtype: float64\n",
-      "Returns      1.277704\n",
-      "Returns_0    1.202564\n",
-      "dtype: float64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/2b/tgv3r4pj32b_81f22_mtv7bh0000gn/T/ipykernel_40059/4286599706.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  current_price = prices[i]\n",
-      "/var/folders/2b/tgv3r4pj32b_81f22_mtv7bh0000gn/T/ipykernel_40059/4286599706.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  current_price = prices[i]\n",
-      "/var/folders/2b/tgv3r4pj32b_81f22_mtv7bh0000gn/T/ipykernel_40059/4286599706.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  current_price = prices[i]\n",
-      "/var/folders/2b/tgv3r4pj32b_81f22_mtv7bh0000gn/T/ipykernel_40059/4286599706.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  current_price = prices[i]\n",
-      "/var/folders/2b/tgv3r4pj32b_81f22_mtv7bh0000gn/T/ipykernel_40059/4286599706.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  current_price = prices[i]\n"
-     ]
-    }
-   ],
-   "source": [
-    "signal_for_certain_pct(0)"
    ]
   },
   {
@@ -1986,7 +2021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
