--- a/Project_RandomForest.ipynb
+++ b/Project_RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,15 @@
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.datasets import make_classification\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from itertools import combinations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Fetching"
    ]
   },
   {
@@ -63,8 +71,7 @@
    ],
    "source": [
     "raw = pd.read_csv('tr_eikon_eod_data.csv', \n",
-    "                 index_col = 0, parse_dates = True)\n",
-    "print(raw.info())"
+    "                 index_col = 0, parse_dates = True)"
    ]
   },
   {
@@ -75,6 +82,15 @@
    "source": [
     "colnames = ['AAPL.O', 'MSFT.O', 'INTC.O', 'AMZN.O', 'GS.N']\n",
     "tickers = [\"AAPL\", \"MSFT\", \"INTC\", \"AMZN\", \"GS\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### External data\n",
+    "\n",
+    "*Dropped due to lack of improvement"
    ]
   },
   {
@@ -142,9 +158,9 @@
     }
    ],
    "source": [
-    "ext_data = yf.download(\"AAPL MSFT INTC AMZN GS\", start=\"2010-01-01\", end=\"2018-07-01\")\n",
+    "# ext_data = yf.download(\"AAPL MSFT INTC AMZN GS\", start=\"2010-01-01\", end=\"2018-07-01\")\n",
     "\n",
-    "print(ext_data.info())"
+    "# print(ext_data.info())"
    ]
   },
   {
@@ -320,25 +336,39 @@
     }
    ],
    "source": [
-    "data = raw[colnames]\n",
+    "# data = raw[colnames]\n",
     "\n",
-    "print(ext_data[\"Open\"][\"AAPL\"])\n",
-    "print(ext_data[\"Close\"][\"AAPL\"])\n",
-    "print(ext_data[\"High\"][\"AAPL\"])\n",
-    "print(ext_data[\"Low\"][\"AAPL\"])\n",
-    "print(data[\"AAPL.O\"])\n",
-    "print(data[data.isna().any(axis=1)])\n",
-    "print(ext_data[\"Close\"])\n",
+    "# print(ext_data[\"Open\"][\"AAPL\"])\n",
+    "# print(ext_data[\"Close\"][\"AAPL\"])\n",
+    "# print(ext_data[\"High\"][\"AAPL\"])\n",
+    "# print(ext_data[\"Low\"][\"AAPL\"])\n",
+    "# print(data[\"AAPL.O\"])\n",
+    "# print(data[data.isna().any(axis=1)])\n",
+    "# print(ext_data[\"Close\"])\n",
     "\n",
-    "rets = pd.DataFrame()\n",
+    "# rets = pd.DataFrame()\n",
     "\n",
-    "for stock in colnames:\n",
-    "    data[f\"{stock} ret\"] = np.log(data[stock] / data[stock].shift(1))\n",
+    "# for stock in colnames:\n",
+    "#     data[f\"{stock} ret\"] = np.log(data[stock] / data[stock].shift(1))\n",
     "\n",
-    "data.dropna(inplace=True)    \n",
+    "# data.dropna(inplace=True)    \n",
     "\n",
-    "for stock in colnames:\n",
-    "    data[f\"{stock} dir\"] = np.sign(data[f\"{stock} ret\"]).astype(int)"
+    "# for stock in colnames:\n",
+    "#     data[f\"{stock} dir\"] = np.sign(data[f\"{stock} ret\"]).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lag returns"
    ]
   },
   {
@@ -762,9 +792,14 @@
     "    for i in range(1,11):\n",
     "        feat = f'{stock} lag_' + str(i)\n",
     "        data[feat] = np.digitize(data[f'{stock} ret'].shift(i), stock_bins[stock])\n",
-    "        lag_feat.append(feat)\n",
-    "\n",
-    "data"
+    "        lag_feat.append(feat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RSI calculation"
    ]
   },
   {
@@ -798,6 +833,13 @@
     "    data[feat] = data[feat].shift(1)\n",
     "\n",
     "rsi_feat = [f\"{stock} rsi\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Short and Long Simple Moving Average as buy / sell signals"
    ]
   },
   {
@@ -837,6 +879,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple Moving Average as breakpoint"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 156,
    "metadata": {},
@@ -853,6 +902,13 @@
     "    data[f\"{stock} SMA trade\"] = data[f\"{stock} SMA trade\"].shift(-125).shift(126)\n",
     "\n",
     "sma_feat = [f\"{stock} SMA trade\" for stock in colnames]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Moving Average Convergence Divergence (MACD)"
    ]
   },
   {
@@ -1385,6 +1441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Post processing for RSI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {},
@@ -1401,6 +1464,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 159,
    "metadata": {},
@@ -1411,6 +1481,13 @@
     "    print(string)\n",
     "    print(\"-\" * 100)\n",
     "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting positions on all 5 stocks at once"
    ]
   },
   {
@@ -1628,7 +1705,7 @@
     "print_data(\"Total rows:\", results.shape[0])\n",
     "\n",
     "feature_importances = model.feature_importances_\n",
-    "print_data(\"Feature importance:\", pd.DataFrame(data=feature_importances, index=features, columns=[\"Importance\"]).sort_values(\"Importance\", ascending=False))\n",
+    "# print_data(\"Feature importance:\", pd.DataFrame(data=feature_importances, index=features, columns=[\"Importance\"]).sort_values(\"Importance\", ascending=False))\n",
     "\n",
     "fig, axes = plt.subplots(nrows=3, ncols=2, figsize=(12,24))\n",
     "\n",
@@ -1673,6 +1750,13 @@
     "    plt.title(f'Confusion Matrix for {stock} (F1 Score: {f1_score:.2f})')\n",
     "    plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting positions on each stock individually with their features"
    ]
   },
   {
@@ -1973,7 +2057,7 @@
     "    print_data(\"Total rows:\", results.shape[0])\n",
     "\n",
     "    feature_importances = model.feature_importances_\n",
-    "    print_data(\"Feature importance:\", pd.DataFrame(data=feature_importances, index=feat, columns=[\"Importance\"]).sort_values(\"Importance\", ascending=False))\n",
+    "    # print_data(\"Feature importance:\", pd.DataFrame(data=feature_importances, index=feat, columns=[\"Importance\"]).sort_values(\"Importance\", ascending=False))\n",
     "\n",
     "    data_test[f\"{stock} ret\"].cumsum().apply(np.exp).plot(ax=axes[i // 2, i % 2], label=\"returns\")\n",
     "    (results[:, 0] * data_test[f\"{stock} ret\"]).cumsum().apply(np.exp).plot(ax=axes[i // 2, i % 2], label=\"RandomForest\")\n",
@@ -1998,6 +2082,13 @@
     "    plt.title(f'Confusion Matrix for {stock} (F1 Score: {f1_score:.2f})')\n",
     "    \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulations"
    ]
   },
   {
@@ -2074,21 +2165,30 @@
     "\n",
     "    print_data(\"Mean improvement: \", sim.mean())\n",
     "\n",
-    "    print_data(\"std dev of improvements: \", sim.std())\n",
+    "    # print_data(\"std dev of improvements: \", sim.std())\n",
+    "\n",
+    "    print_data(\"Mean total returns: \", sim.sum(axis=1).mean())\n",
     "\n",
     "    print_data(\"Number of improvements: \", improv.replace(-1, 0).sum(axis=0))\n",
     "\n",
-    "    print_data(\"Mean false predictions: \", false_pred.mean())\n",
+    "    # print_data(\"Mean false predictions: \", false_pred.mean())\n",
     "\n",
-    "    print_data(\"std dev false predictions: \", false_pred.std())\n",
+    "    # print_data(\"std dev false predictions: \", false_pred.std())\n",
     "\n",
-    "    print_data(\"Mean feature importance\", sorted_imp)\n",
+    "    # print_data(\"Mean feature importance\", sorted_imp)\n",
     "\n",
-    "    print_data(\"std dev feature importance\", imp.std(axis=1).reindex(sorted_imp.index))\n",
+    "    # print_data(\"std dev feature importance\", imp.std(axis=1).reindex(sorted_imp.index))\n",
     "\n",
     "    print_data(\"Mean f1 score:\", pd.DataFrame(data=(f1s.sum(axis=0) / (it * (1 + rerun))), index=[f\"{stock} f1\" for stock in stocks]))\n",
     "\n",
     "    print_data(\"std dev of f1 scores: \", pd.DataFrame(data=(f1s.std(axis=0)), index=[f\"{stock} f1\" for stock in stocks]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simulation parameters"
    ]
   },
   {
@@ -2101,6 +2201,13 @@
     "reruns = 300\n",
     "ran_split = True\n",
     "roll = 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Single stock prediction simulations"
    ]
   },
   {
@@ -2539,6 +2646,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multi-stock prediction simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 187,
    "metadata": {},
@@ -2769,9 +2883,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fine-tuning\n",
-    "\n",
-    "Below are some codes used to finetune the features / model"
+    "## Fine-tuning"
    ]
   },
   {
@@ -3017,6 +3129,229 @@
     "#     table = pd.concat([table, summary.T], axis=0)\n",
     "\n",
     "# table.to_csv(\"SMA_trade_grid_search.csv\", sep=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finetuning: Number of lag returns to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = pd.DataFrame()\n",
+    "it = 1\n",
+    "rerun = 1000\n",
+    "ran_split = True\n",
+    "\n",
+    "lags = [i for i in range(0, 11)]\n",
+    "\n",
+    "feat_ = list(filter(lambda x: \"lag_\" not in x, features))\n",
+    "\n",
+    "for lag in lags:\n",
+    "    label = f\"{lag}\"\n",
+    "\n",
+    "    lag_itr = []\n",
+    "    for j in range(1, lag + 1):\n",
+    "        for stock in colnames:\n",
+    "            lag_itr += [f\"{stock} lag_{j}\"]\n",
+    "    feat = feat_ + lag_itr\n",
+    "        \n",
+    "    sim = pd.DataFrame(columns=[f\"{stock} ret\" for stock in colnames])\n",
+    "    improv = pd.DataFrame(columns=[f\"{stock} ret\" for stock in colnames])\n",
+    "    false_pred = np.zeros((it * (1 + rerun), 5))\n",
+    "    f1s = np.zeros((it * (1 + rerun), 5))\n",
+    "    imp = pd.DataFrame(index=feat)\n",
+    "    run = 0\n",
+    "\n",
+    "    while True:\n",
+    "        if ran_split:\n",
+    "            train, test = train_test_split(feat_data, \n",
+    "                                                test_size = 0.2)\n",
+    "\n",
+    "        train = train.copy().sort_index()\n",
+    "        test = test.copy().sort_index()\n",
+    "\n",
+    "        training = train[feat]\n",
+    "        testing = test[feat]\n",
+    "\n",
+    "        for i in range(it):\n",
+    "            model = RandomForestClassifier(max_depth=5, min_samples_leaf=5, random_state=42)\n",
+    "            model.fit(training, training_res)\n",
+    "\n",
+    "            results = model.predict(testing)\n",
+    "            rets = test[[f\"{stock} ret\" for stock in colnames]].sum().apply(np.exp)\n",
+    "            pred_rets = (results * test[[f\"{stock} ret\" for stock in colnames]]).sum().apply(np.exp)\n",
+    "\n",
+    "            sim = pd.concat([(pred_rets - rets).to_frame().T, sim], ignore_index=True)\n",
+    "\n",
+    "            improv = pd.concat([improv, np.sign(pred_rets - rets).astype(int).to_frame().T], ignore_index=True)\n",
+    "            false_pred[i + run * it, :] = (results != test[[f\"{stock} dir\" for stock in colnames]]).sum()\n",
+    "\n",
+    "            importances = pd.Series(model.feature_importances_, index=training.columns)\n",
+    "            imp = pd.concat([imp, importances], axis=1)\n",
+    "\n",
+    "            for j, stock in enumerate(colnames):\n",
+    "                # Create confusion matrix\n",
+    "                conf_matrix = np.zeros((2, 2))\n",
+    "                for actual, predicted in zip(test[f\"{stock} dir\"].values, results[:, j]):\n",
+    "                    actual_index = 0 if actual == -1 else 1\n",
+    "                    predicted_index = 0 if predicted == -1 else 1\n",
+    "                    conf_matrix[actual_index, predicted_index] += 1\n",
+    "\n",
+    "                # Calculate F1 score\n",
+    "                f1_score = calculate_f1_score(conf_matrix)\n",
+    "                f1s[i + run * it, j] = f1_score\n",
+    "        run += 1\n",
+    "        if run <= rerun:\n",
+    "            continue\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    false_pred = pd.DataFrame(data=false_pred, columns=[f\"{stock} falses\" for stock in colnames], index=[j for j in range(it * (1 + rerun))])\n",
+    "\n",
+    "    imp_mean = (imp.sum(axis=1) / (it * (1 + rerun)))\n",
+    "    imp_mean.index = [f\"{imp} mean imp\" for imp in feat]\n",
+    "\n",
+    "    ret_mean = sim.mean()\n",
+    "    ret_mean.index = [f\"{stock} mean ret\" for stock in colnames]\n",
+    "\n",
+    "    improv.columns = [f\"{stock} improvs\" for stock in colnames]\n",
+    "\n",
+    "    summary = pd.concat([ret_mean, \n",
+    "                            sim.std(), \n",
+    "                            improv.replace(-1, 0).sum(axis=0), \n",
+    "                            false_pred.mean(), false_pred.std(), \n",
+    "                            pd.DataFrame(data=(f1s.sum(axis=0) / (it * (1 + rerun))), index=[f\"{stock} f1 mean\" for stock in colnames]), \n",
+    "                            pd.DataFrame(data=(f1s.std(axis=0)), index=[f\"{stock} f1 std\" for stock in colnames])], \n",
+    "                            axis=0)\n",
+    "    summary.columns = [label]\n",
+    "\n",
+    "    table = pd.concat([table, summary.T], axis=0)\n",
+    "\n",
+    "table.to_csv(\"lag_grid_search.csv\", sep=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finetuning: Feature combinations to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = pd.DataFrame()\n",
+    "it = 1\n",
+    "rerun = 1000\n",
+    "ran_split = True\n",
+    "\n",
+    "feat_list = [ma_feat, sma_feat, lag_feat, rsi_feat, MACD_feat]\n",
+    "\n",
+    "feat_combi = []\n",
+    "\n",
+    "for i in range(1, len(feat_list) + 1):\n",
+    "    feat_combi += list(combinations(feat_list, i))\n",
+    "\n",
+    "for combi in feat_combi:\n",
+    "    label = \"\"\n",
+    "    if ma_feat in combi:\n",
+    "        label += \"ma_feat \"\n",
+    "    if sma_feat in combi:\n",
+    "        label += \"sma_feat \"\n",
+    "    if lag_feat in combi:\n",
+    "        label += \"lag_feat \"\n",
+    "    if rsi_feat in combi:\n",
+    "        label += \"rsi_feat \"\n",
+    "    if MACD_feat in combi:\n",
+    "        label += \"MACD_feat\"\n",
+    "\n",
+    "    final_feat = []\n",
+    "    for stuff in combi:\n",
+    "        final_feat += stuff\n",
+    "        \n",
+    "    sim = pd.DataFrame(columns=[f\"{stock} ret\" for stock in colnames])\n",
+    "    improv = pd.DataFrame(columns=[f\"{stock} ret\" for stock in colnames])\n",
+    "    false_pred = np.zeros((it * (1 + rerun), 5))\n",
+    "    f1s = np.zeros((it * (1 + rerun), 5))\n",
+    "    imp = pd.DataFrame(index=feat)\n",
+    "    run = 0\n",
+    "\n",
+    "    while True:\n",
+    "        if ran_split:\n",
+    "            train, test = train_test_split(feat_data, \n",
+    "                                                test_size = 0.2)\n",
+    "\n",
+    "        train = train.copy().sort_index()\n",
+    "        test = test.copy().sort_index()\n",
+    "\n",
+    "        training = train[feat]\n",
+    "        testing = test[feat]\n",
+    "\n",
+    "        for i in range(it):\n",
+    "            model = RandomForestClassifier(max_depth=5, min_samples_leaf=5, random_state=42)\n",
+    "            model.fit(training, training_res)\n",
+    "\n",
+    "            results = model.predict(testing)\n",
+    "            rets = test[[f\"{stock} ret\" for stock in colnames]].sum().apply(np.exp)\n",
+    "            pred_rets = (results * test[[f\"{stock} ret\" for stock in colnames]]).sum().apply(np.exp)\n",
+    "\n",
+    "            sim = pd.concat([(pred_rets - rets).to_frame().T, sim], ignore_index=True)\n",
+    "\n",
+    "            improv = pd.concat([improv, np.sign(pred_rets - rets).astype(int).to_frame().T], ignore_index=True)\n",
+    "            false_pred[i + run * it, :] = (results != test[[f\"{stock} dir\" for stock in colnames]]).sum()\n",
+    "\n",
+    "            importances = pd.Series(model.feature_importances_, index=training.columns)\n",
+    "            imp = pd.concat([imp, importances], axis=1)\n",
+    "\n",
+    "            for j, stock in enumerate(colnames):\n",
+    "                # Create confusion matrix\n",
+    "                conf_matrix = np.zeros((2, 2))\n",
+    "                for actual, predicted in zip(test[f\"{stock} dir\"].values, results[:, j]):\n",
+    "                    actual_index = 0 if actual == -1 else 1\n",
+    "                    predicted_index = 0 if predicted == -1 else 1\n",
+    "                    conf_matrix[actual_index, predicted_index] += 1\n",
+    "\n",
+    "                # Calculate F1 score\n",
+    "                f1_score = calculate_f1_score(conf_matrix)\n",
+    "                f1s[i + run * it, j] = f1_score\n",
+    "        run += 1\n",
+    "        if run <= rerun:\n",
+    "            continue\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    false_pred = pd.DataFrame(data=false_pred, columns=[f\"{stock} falses\" for stock in colnames], index=[j for j in range(it * (1 + rerun))])\n",
+    "\n",
+    "    imp_mean = (imp.sum(axis=1) / (it * (1 + rerun)))\n",
+    "    imp_mean.index = [f\"{imp} mean imp\" for imp in feat]\n",
+    "\n",
+    "    ret_mean = sim.mean()\n",
+    "    ret_mean.index = [f\"{stock} mean ret\" for stock in colnames]\n",
+    "\n",
+    "    improv.columns = [f\"{stock} improvs\" for stock in colnames]\n",
+    "\n",
+    "    summary = pd.concat([ret_mean, \n",
+    "                            sim.std(), \n",
+    "                            improv.replace(-1, 0).sum(axis=0), \n",
+    "                            false_pred.mean(), false_pred.std(), \n",
+    "                            pd.DataFrame(data=(f1s.sum(axis=0) / (it * (1 + rerun))), index=[f\"{stock} f1 mean\" for stock in colnames]), \n",
+    "                            pd.DataFrame(data=(f1s.std(axis=0)), index=[f\"{stock} f1 std\" for stock in colnames])], \n",
+    "                            axis=0)\n",
+    "    summary.columns = [label]\n",
+    "\n",
+    "    table = pd.concat([table, summary.T], axis=0)\n",
+    "\n",
+    "table.to_csv(\"feat_combi_grid_search.csv\", sep=',')"
    ]
   },
   {
