--- a/Project_RandomForest.ipynb
+++ b/Project_RandomForest.ipynb
@@ -336,7 +336,7 @@
     }
    ],
    "source": [
-    "# data = raw[colnames]\n",
+    "data = raw[colnames]\n",
     "\n",
     "# print(ext_data[\"Open\"][\"AAPL\"])\n",
     "# print(ext_data[\"Close\"][\"AAPL\"])\n",
@@ -346,15 +346,15 @@
     "# print(data[data.isna().any(axis=1)])\n",
     "# print(ext_data[\"Close\"])\n",
     "\n",
-    "# rets = pd.DataFrame()\n",
+    "rets = pd.DataFrame()\n",
     "\n",
-    "# for stock in colnames:\n",
-    "#     data[f\"{stock} ret\"] = np.log(data[stock] / data[stock].shift(1))\n",
+    "for stock in colnames:\n",
+    "    data[f\"{stock} ret\"] = np.log(data[stock] / data[stock].shift(1))\n",
     "\n",
-    "# data.dropna(inplace=True)    \n",
+    "data.dropna(inplace=True)    \n",
     "\n",
-    "# for stock in colnames:\n",
-    "#     data[f\"{stock} dir\"] = np.sign(data[f\"{stock} ret\"]).astype(int)"
+    "for stock in colnames:\n",
+    "    data[f\"{stock} dir\"] = np.sign(data[f\"{stock} ret\"]).astype(int)"
    ]
   },
   {
